<resources>
    <string name="app_name">SehatIn</string>
    <string name="skip">Skip</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="Left"><![CDATA[<]]></string>
    <string name="Right"><![CDATA[>]]></string>

    <!-- String untuk intro page -->
    <string name="introPage_heading_1">Selamat Datang !</string>
    <string name="introPage_heading_2">Calories Tracking</string>
    <string name="introPage_heading_3">Food Scaning</string>
    <string name="introPage_heading_4">Food and Sports </string>

    <string name="introPage_desc_1">Lanjut untuk selangkah lebih sehat </string>
    <string name="introPage_desc_2">Catat kalori harian anda dengan mudah  </string>
    <string name="introPage_desc_3">Scan makanan untuk mengetahui kalori secara otomatis </string>
    <string name="introPage_desc_4">Dapatkan rekomendasi makanan dan olahraga terbaik </string>
    <string name="mainPage_body_information">Body Information</string>
    <string name="mainPage_nutrients_indicator">Nutrients Indicator</string>
    <string name="registerGeneral_profile_detail">Profile Detail</string>
    <string name="registerGeneral_name">Name:</string>
    <string name="registerGeneral_name2">Name</string>
    <string name="registerGeneral_Password">Password</string>
    <string name="registerGeneral_email">Email</string>
    <string name="registerGeneral_Save">Save</string>
    <string name="registerGeneral_Next">next</string>
    <string name="RegisterGoal_LoseWeight">Lose Weight</string>
    <string name="RegisterGoal_GainWeight">Gain Weight</string>
    <string name="RegisterGoal_KeepWeight">Keep Weight</string>
    <string name="RegisterGoal_Title">What\'s your Goal?</string>
    <string name="RegisterGoal_Desc1">Kami akan melakukan kalkulasi kalori bedasarkan tujuan anda</string>
    <string name="RegisterGoal_Back">Back</string>
    <string name="RegisterGender_Male">Male</string>
    <string name="RegisterGender_Female">Female</string>
    <string name="RegisterGender_title">What\'s your Gender?</string>
    <string name="RegisterGender_Desc1">Laki-laki membutuhkan kalori lebih</string>
    <string name="RegisterActive_Title">How active are you?</string>
    <string name="RegisterActive_Desc1">Seberapa aktif kegiatan anda dalam sehari?</string>
    <string name="RegisterActive_Sedentary">Sedentary</string>
    <string name="RegisterGoal_LowActive">Low Active</string>
    <string name="RegisterActive_Active">Active</string>
    <string name="RegisterActive_VeryActive">Very Active</string>
    <string name="RegisterHeight_Desc1">Semakin tinggi badan semakin banyak juga kalori yang dibutuhkan</string>
    <string name="RegisterHeight_Title">How tall are you?</string>
    <string name="RegisterHeight_Meter">m</string>
    <string name="RegisterHeight_CM">cm</string>
    <string name="RegisterWeight_Title">What\'s your weight?</string>
    <string name="RegisterWeight_Desc1">Semakin berat tubuh, maka tubuh perlu membakar kalori lebih</string>
    <string name="kg">Kg</string>
    <string name="RegisterWeight_Desc2">Masukkan berat badan</string>
    <string name="RegisterAge_Title">What\'s your age?</string>
    <string name="RegisterAge_Desc1">Jumlah kalori yang dibutuhkan bervariasi sesuai usia</string>
    <string name="years">Years</string>
    <string name="BottomSheet_Done">Dismiss</string>
    <string name="BottomSheet_DoneButton">Done</string>
    <string name="calories">Calories</string>
    <string name="Bottom_Sheet_Title">Daily calorie intake</string>
    <string name="BottomSheet_EditText">Enter your calories</string>
    <string name="recommended">Recommended:</string>
    <string name="RegisterCalorie_Calories">Calories</string>
    <string name="RegisterCalorie_Title">Calorie Intake</string>
    <string name="RegisterCalorie_Protein">Protein</string>
    <string name="RegisterCalorie_Fats">Fats</string>
    <string name="RegisterCalorie_Carbs">Carbs</string>
    <string name="RegisterCalorie_Done">Done</string>
    <string name="cal">Cal</string>
    <string name="gram">Gram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ingredients_list_bakso">
        \u2022 200 gr daging sapi giling\n
        \u2022 100 gr batu es, giling halus bersama daging sapi\n
        \u2022 2 sdm bawang merah goreng\n
        \u2022 2 sdm bawang putih goreng\n
        \u2022 1 butir putih telur\n
        \u2022 1 sdt baking powder\n
        \u2022 1/4 sdt merica bubuk\n
        \u2022 150 gr tepung sagu\n
        \u2022 1 sachet Royco sapi\n
        \u2022 500 ml air\n
        \u2022 10 gr daun bawang\n
        \u2022 10 gr seledri\n
        \u2022 10 gr bawang merah goreng\n
        \u2022 bihun\n
        \u2022 50 gr pak choi
    </string>
    <string name="cooking_instructions_bakso">
        1. Campurkan daging sapi giling, batu es yang sudah dihaluskan, bawang merah goreng, bawang putih goreng, putih telur, baking powder, merica bubuk, tepung sagu, dan Royco sapi. Aduk rata hingga adonan kalis.\n
        2. Panaskan 500 ml air hingga mendidih. Kecilkan api.\n
        3. Bentuk adonan bakso menjadi bola-bola menggunakan tangan yang dibasahi air atau sendok, lalu masukkan langsung ke dalam air mendidih. Lakukan hingga adonan habis.\n
        4. Masak bakso hingga mengapung dan matang sempurna. Angkat dan tiriskan.\n
        5. Untuk kuah, Anda bisa menggunakan kaldu sapi. Tambahkan daun bawang, seledri, dan bawang merah goreng sebagai pelengkap.\n
        6. Sajikan bakso dengan bihun dan pak choi rebus.
    </string>
    <string name="underlined_calories"><u>TextView</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String untuk -->
</resources>