<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_primary"
    android:orientation="vertical"
    android:padding="24dp">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="@color/on_background"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/on_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bottom_Sheet_Title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:textColor="@color/text_color2"
        android:textSize="15sp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/BottomSheet_EditText"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/on_background"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:background="@drawable/edit_text_backgroud"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewRecommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommended"
        android:textColor="@color/button_color"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/BottomSheet_DoneButton"
        android:textAllCaps="false"
        android:textColor="@color/text_color1"
        android:backgroundTint="@color/button_color" />

</LinearLayout>
