<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterGoal">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/RegisterGoal_Title"
        android:textSize="25sp"
        android:textColor="@color/text_color2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/RegisterGoal_Desc1"
        android:textAlignment="center"
        android:textColor="@color/text_color1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_LoseWeight"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/RegisterGoal_LoseWeight"
        android:textColor="@color/text_color2"
        android:background="@drawable/button_unpressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_GainWeight"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/RegisterGoal_GainWeight"
        android:textColor="@color/text_color2"
        android:background="@drawable/custom_reactive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_KeepWeight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_KeepWeight"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/RegisterGoal_KeepWeight"
        android:textColor="@color/text_color2"
        android:background="@drawable/custom_reactive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_LoseWeight" />

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/RegisterGoal_Back"
        android:textColor="@color/text_color1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round_button"
        android:text="@string/Right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>