<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterGoal">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/RegisterGender_title"
        android:textAlignment="center"
        android:textColor="@color/text_color2"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/RegisterGender_Desc1"
        android:textAlignment="center"
        android:textColor="@color/text_color1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Male"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/button_unpressed"
        android:text="@string/RegisterGender_Male"
        android:textColor="@color/text_color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Female"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_reactive_button"
        android:text="@string/RegisterGender_Female"
        android:textColor="@color/text_color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Male" />

    <TextView
        android:id="@+id/backButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="56dp"
        android:text="@string/RegisterGoal_Back"
        android:textColor="@color/text_color1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_button"
        android:text="@string/Right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>